--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,13 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
+@import url(./vendor/normalize.css);
+@import url(./blocks/page/page.css);
+@import url(./vendor/inter.css);
+@import url(./blocks/popup/_opened/popup_opened.css);
+@import url(./blocks/footer/footer.css);
+@import url(./blocks/main/main.css);
+@import url(./blocks/header/header.css);
+@import url(./blocks/events/events.css);
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
-}
+
+@import url(./blocks/popup/popup.css);
+@import url(./blocks/card/card.css);
+
