--- a/src/index.css
+++ b/src/index.css
@@ -6,8 +6,8 @@
 @import url(./blocks/main/main.css);
 @import url(./blocks/header/header.css);
 @import url(./blocks/events/events.css);
-
-
+@import url(./blocks/creation-event/creation-event.css);
 @import url(./blocks/popup/popup.css);
 @import url(./blocks/card/card.css);
-
+@import url(./blocks/page-events/page-events.css);
+@import url(./blocks/elements/elements.css);
