--- a/src/blocks/header/header.css
+++ b/src/blocks/header/header.css
@@ -7,7 +7,7 @@
   max-width: 1184px;
   height: 52px;
   margin-bottom: 56px;
-  margin-top: 28px;
+  margin-top: 0;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
