Refactor: Margin-top in header.css set as 0

--- a/src/blocks/header/header.css
+++ b/src/blocks/header/header.css
@@ -14,6 +14,7 @@
   box-sizing: border-box;
   margin-left: auto;
   margin-right: auto;
+  /* border: 1px solid salmon; */
 }
 
 @media screen and (max-width: 1054px) {
