--- a/src/blocks/header/header.css
+++ b/src/blocks/header/header.css
@@ -15,6 +15,7 @@
   margin-left: auto;
   margin-right: auto;
   /* border: 1px solid salmon; */
+    /* border: 1px solid salmon; */
 }
 
 @media screen and (max-width: 1054px) {
