Refactor: new design was made for main page

--- a/src/blocks/footer/__copyright/footer__copyright.css
+++ b/src/blocks/footer/__copyright/footer__copyright.css
@@ -7,7 +7,7 @@
   line-height: 16px;
   /* identical to box height, or 114% */
   text-align: right;
-  color: #ffffff;
+  color: #086788;
   margin-top: 0;
 }
 
