--- a/src/index.css
+++ b/src/index.css
@@ -14,3 +14,4 @@
 @import url(./blocks/intro/intro.css);
 @import url(./blocks/description_event/description_event.css);
 @import url(./blocks/submit/submit.css);
+@import url(./blocks/lead/lead.css);
