--- a/src/blocks/events/events.css
+++ b/src/blocks/events/events.css
@@ -1,6 +1,9 @@
 @import url("./__title/events__title.css");
 @import url("./__subtitle/events__subtitle.css");
 @import url("./__container/events__container.css");
+@import url('./__image/events__image.css');
+@import url('./__submit/events__submit.css');
+@import url('./__submit-color/events__submit-color.css');
 
 .events {
   display: flex;
