--- a/src/blocks/main/__title/main__title.css
+++ b/src/blocks/main/__title/main__title.css
@@ -1,15 +1,18 @@
 .main__title {
-  max-width: 720px;
+  max-width: 461px;
   margin-top: 0;
   margin-bottom: 0;
   font-weight: bold;
   font-size: 64px;
-  line-height: 75px;
+  font-style: normal;
+  line-height: 78px;
   /* or 104% */
   margin: 0 auto;
-  text-align: center;
+  text-align: left;
 
-  color: #ffffff;
+   color: #086788; 
+ 
+
 }
 
 /* @media screen and (max-width: 768px) {
