--- a/src/blocks/main/main.css
+++ b/src/blocks/main/main.css
@@ -7,7 +7,7 @@
   display: flex;
   flex-direction: row;
   justify-content: space-between;
-  max-width: 984px;
+  /* max-width: 984px; */
   margin: auto;
   margin-bottom: 5%;
 }
