--- a/src/blocks/page/page.css
+++ b/src/blocks/page/page.css
@@ -1,5 +1,7 @@
 .page {
-  background-color: #2a2c2f;
+  /* background-color: #2a2c2f; */
+  background-color:  #F2FCFF;
+
   font-family: Inter, Arial, sans-serif;
   font-style: normal;
 }
