--- a/src/blocks/header/header.css
+++ b/src/blocks/header/header.css
@@ -10,7 +10,7 @@
   margin-top: 0;
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
+  justify-content: center;
   box-sizing: border-box;
   margin-left: auto;
   margin-right: auto;
