--- a/src/blocks/main/__subtitle/main__subtitle.css
+++ b/src/blocks/main/__subtitle/main__subtitle.css
@@ -3,9 +3,9 @@
   font-size: 21px;
   line-height: 25px;
   text-align: left;
-  color: #086788;
+  /* color: #086788; */
 
-  font-style: normal;
+  /* font-style: normal; */
   font-weight: 300;
 }
 
