--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,6 @@
 @import url(./vendor/normalize.css);
 @import url(./blocks/page/page.css);
+@import url(./blocks/content/content.css);
 @import url(./vendor/inter.css);
 @import url(./blocks/popup/_opened/popup_opened.css);
 @import url(./blocks/footer/footer.css);
