Refactor: styles are changed for all pages

--- a/src/blocks/creation-event/__title/creation-event__title.css
+++ b/src/blocks/creation-event/__title/creation-event__title.css
@@ -3,7 +3,7 @@
     font-weight: bold;
     font-size: 36px;
     line-height: 42px;
-    color: seashell;
+    color: #086788;
     max-width: 430px;
   
 }
