--- a/src/blocks/footer/footer.css
+++ b/src/blocks/footer/footer.css
@@ -1,22 +1,15 @@
 @import url(./__link/footer__link.css);
 @import url(./__links/footer__links.css);
 @import url(./__copyright/footer__copyright.css);
+@import url(./__container/footer__container.css);
 
 .footer {
   /* footer */
-  max-width: 1184px;
-  width: 94%;
   height: 80px;
-  background-color:  #BFEBF5;;
-  /*min-height: 18px;*/
-  /* margin-top: 7.3%; */
-  margin-left: auto;
-  margin-right: auto;
+  background-color: #bfebf5;
   display: flex;
   flex-direction: row;
-  justify-content: space-between;
   align-items: center;
-  /* margin-bottom: 24px; */
 }
 
 /* @media screen and (max-width: 1030px) {
