--- a/src/blocks/page-events/__column-links/page-events__column-links.css
+++ b/src/blocks/page-events/__column-links/page-events__column-links.css
@@ -4,7 +4,7 @@
     line-height: 18px;
     /* identical to box height, or 112% */
     text-decoration: none;
-    color: #ffffff;
+    color: 086788;
     margin-right: 18px;
     display: flex;
     flex-direction: row;
