--- a/src/blocks/card/__lyrics/card__lyrics.css
+++ b/src/blocks/card/__lyrics/card__lyrics.css
@@ -2,9 +2,9 @@
   margin-top: 0;
   margin-bottom: 0;
   font-style: normal;
-  font-weight: bold;
+  font-weight: 500;
   font-size: 24px;
   line-height: 28px;
   width: 350px;
-  color: aliceblue;
+  color: 086788;
 }
