--- a/src/blocks/creation-event/__label/creation-event__label.css
+++ b/src/blocks/creation-event/__label/creation-event__label.css
@@ -3,7 +3,7 @@
     font-weight: bold;
     font-size: 24px;
     line-height: 28px;
-    color: seashell;
+    color: #086788;
     margin-top: 0;
     margin-bottom: 20px;
     width: 100%;
