--- a/src/blocks/page-events/__title/page-events__title.css
+++ b/src/blocks/page-events/__title/page-events__title.css
@@ -1,9 +1,9 @@
 .page-events__title {
-    width: 99%;
+  width: 99%;
   max-width: 475px;
   font-style: normal;
   font-weight: bold;
   font-size: 36px;
   line-height: 42px;
-  color: seashell;
+  color: 086788;
 }
