Feature: Rubic and Montserrat Alternates fonts are added to the project

--- a/src/blocks/card/__address/card__address.css
+++ b/src/blocks/card/__address/card__address.css
@@ -2,9 +2,9 @@
   margin-top: 12px;
   margin-bottom: 8px;
   width: 350px;
-  font-style: normal;
-  font-weight: normal;
   font-size: 18px;
   line-height: 21px;
   color: #295463;
+  font-family: Rubik;
+  font-weight: 300;
 }
