--- a/src/blocks/page/page.css
+++ b/src/blocks/page/page.css
@@ -1,8 +1,6 @@
 .page {
-  /* background-color: #2a2c2f; */
   background-color: #f2fcff;
-
-  font-family: Inter, Arial, sans-serif;
+  font-family: Rubic, Arial, sans-serif;
   font-style: normal;
   color: #086788;
 }
