--- a/src/blocks/card/__author/card__author.css
+++ b/src/blocks/card/__author/card__author.css
@@ -1,9 +1,8 @@
 .card__author {
-  font-family: Roboto;
   width: 438px;
   height: 56px;
-  font-style: normal;
   font-weight: 500;
   font-size: 48px;
-  line-height: 56px;
+  font-family: Montserrat Alternates;
+  line-height: 59px;
 }
