--- a/src/blocks/card/__date/card__date.css
+++ b/src/blocks/card/__date/card__date.css
@@ -1,9 +1,9 @@
 .card__date {
   margin-top: 0;
   width: 350px;
-  font-style: normal;
-  font-weight: normal;
   font-size: 18px;
   line-height: 21px;
-  color: #086788;
+  /* color: #086788; */
+  font-family: Rubik;
+  font-weight: 300;
 }
