--- a/src/blocks/card/__lyrics/card__lyrics.css
+++ b/src/blocks/card/__lyrics/card__lyrics.css
@@ -1,10 +1,10 @@
 .card__lyrics {
   margin-top: 0;
   margin-bottom: 0;
-  font-style: normal;
   font-weight: 500;
   font-size: 24px;
   line-height: 28px;
   width: 350px;
-  color: 086788;
+  font-family: Rubik;
+  color: #086788;
 }
