--- a/src/blocks/card/__topic/card__topic.css
+++ b/src/blocks/card/__topic/card__topic.css
@@ -3,4 +3,8 @@
   height: 24px;
   color: #086788;
   padding-left: 10px;
+  font-family: Rubik;
+  font-weight: normal;
+  font-size: 18px;
+  line-height: 21px;
 }
