--- a/src/blocks/creation-event/__label/creation-event__label.css
+++ b/src/blocks/creation-event/__label/creation-event__label.css
@@ -1,10 +1,10 @@
-.creation-event__label{
-    font-style: normal;
-    font-weight: bold;
-    font-size: 24px;
-    line-height: 28px;
-    color: #086788;
-    margin-top: 0;
-    margin-bottom: 20px;
-    width: 100%;
+.creation-event__label {
+  font-size: 24px;
+  line-height: 28px;
+  color: #086788;
+  margin-top: 0;
+  margin-bottom: 20px;
+  width: 100%;
+  font-family: Rubik;
+  font-weight: 500;
 }
