--- a/src/blocks/events/__title/events__title.css
+++ b/src/blocks/events/__title/events__title.css
@@ -1,8 +1,9 @@
 .events__title {
   max-width: 275px;
    color: #086788; 
-  font-weight: bold;
   font-size: 24px;
   line-height: 28px;
   margin-bottom: 16px;
+  font-family: Rubik;
+  font-weight: 500;
 }
