--- a/src/blocks/footer/__copyright/footer__copyright.css
+++ b/src/blocks/footer/__copyright/footer__copyright.css
@@ -1,19 +1,18 @@
 .footer__copyright {
-  /* __copyright */
   max-width: 186px;
-  /*min-height: 16px;*/
-  font-weight: normal;
-  font-size: 14px;
-  line-height: 16px;
-  /* identical to box height, or 114% */
   text-align: right;
   color: #086788;
   margin-top: 0;
+  font-family: Rubik;
+  font-weight: 300;
+  font-size: 18px;
+  line-height: 21px;
+  margin-bottom: 0;
 }
 
-@media screen and (max-width: 768px) {
+/* @media screen and (max-width: 768px) {
   .footer__copyright {
     line-height: 14px;
     text-align: left;
   }
-}
+} */
