--- a/src/blocks/submit/submit.css
+++ b/src/blocks/submit/submit.css
@@ -1,5 +1,3 @@
-
-
 .submit {
   display: flex;
   flex-direction: row;
@@ -7,11 +5,15 @@
   align-items: center;
   background: #f96900;
   border-radius: 10px;
-  color: #FFFFFF;
+  color: #ffffff;
   width: 338px;
   height: 60px;
   border: 0;
   text-decoration: none;
+  font-family: Rubik;
+  font-weight: 500;
+  font-size: 21px;
+  line-height: 25px;
 }
 
 .submit:hover {
