Refactor: mainPage is ready for 1440 screen resolution

--- a/src/blocks/events/__container/events__container.css
+++ b/src/blocks/events/__container/events__container.css
@@ -1,11 +1,8 @@
 .events__container {
-  margin: 0 15px;
-  max-width: 540px;
-  width: 40%;
-  padding: 28px;
+  width: 506px;
   height: 442px;
+  padding-left: 36px;
   display: flex;
   flex-direction: column;
-  justify-content: space-around;
   margin-bottom: 75px;
 }
