--- a/src/blocks/events/__subtitle/events__subtitle.css
+++ b/src/blocks/events/__subtitle/events__subtitle.css
@@ -1,8 +1,8 @@
 .events__subtitle {
   margin-top: 0;
   margin-bottom: 0;
-  max-width: 481px;
-  color: #086788;
+  max-width: 468px;
+  /* color: #086788; */
   font-size: 21px;
   line-height: 25px;
   font-family: Rubik;
