--- a/src/blocks/header/__logo/header__logo.css
+++ b/src/blocks/header/__logo/header__logo.css
@@ -1,13 +1,11 @@
 .header__logo {
-  width: 176px;
-  height: 52px;
-
-  /*  border: 1px solid red;*/
+  width: 109px;
+  height: 64px;
 }
 
-@media screen and (max-width: 410px) {
+/* @media screen and (max-width: 410px) {
   .header__logo {
     max-width: 142px;
     height: 42px;
   }
-}
+} */
