--- a/src/blocks/page-events/page-events.css
+++ b/src/blocks/page-events/page-events.css
@@ -1,7 +1,8 @@
-@import url('./__title/page-events__title.css');
-@import url('./__content-info/page-events__content-info.css');
-@import url('./__column-links/page-events__column-links.css');
+@import url("./__title/page-events__title.css");
+@import url("./__content-info/page-events__content-info.css");
+@import url("./__column-links/page-events__column-links.css");
 
-.page-events{
-
+.page-events {
+  margin-top: 9%;
+  margin-bottom: 5.4%;
 }
