--- a/src/blocks/page/page.css
+++ b/src/blocks/page/page.css
@@ -1,6 +1,6 @@
 .page {
   background-color: #f2fcff;
-  font-family: Rubic, Arial, sans-serif;
+  font-family: Rubik, Arial, sans-serif;
   font-style: normal;
   color: #086788;
 }
