--- a/src/blocks/card/__line/card__line.css
+++ b/src/blocks/card/__line/card__line.css
@@ -1,7 +1,7 @@
 .card__line{
     width: 465px;
     height: 2px;
-    border-bottom: 1px solid pink;
     margin-top: 32px;
-    margin-bottom: 77px;
+    margin-bottom: 80px;
+    background: rgba(196, 196, 196, 0.5);
 }
