--- a/src/blocks/creation-event/__label/creation-event__label.css
+++ b/src/blocks/creation-event/__label/creation-event__label.css
@@ -1,7 +1,7 @@
 .creation-event__label {
   font-size: 24px;
   line-height: 28px;
-  color: #086788;
+  /* color: #086788; */
   margin-top: 0;
   margin-bottom: 20px;
   width: 100%;
