--- a/src/blocks/elements/elements.css
+++ b/src/blocks/elements/elements.css
@@ -1,10 +1,13 @@
 .elements{
-    max-width: 1184px;
-    width: 92%;
+    max-width: 1110px;
+    /* width: 92%; */
     display: grid; 
     grid-template-columns: repeat(auto-fill,350px);
     column-gap: 18px;
     row-gap: 18px;
     /* margin: 0 auto; */
+    padding:0;
     justify-content: center;/*отцентровка элементов по центру*/
+    border: 1px solid slategrey;
+    margin-bottom: 9.1%;
 }
