--- a/src/blocks/header/header.css
+++ b/src/blocks/header/header.css
@@ -3,10 +3,10 @@
 @import url('./__links/header__links.css');
 
 .header {
-  width: 94%;
-  max-width: 1184px;
+  /* width: 94%; */
+  max-width: 1110px;
   height: 96px;
-  margin-bottom: 56px;
+  margin-bottom: 0px;
   margin-top: 0;
   display: flex;
   flex-direction: column;
@@ -14,10 +14,8 @@
   box-sizing: border-box;
   margin-left: auto;
   margin-right: auto;
-  /* border: 1px solid salmon; */
-    /* border: 1px solid salmon; */
 }
-
+/* 
 @media screen and (max-width: 1054px) {
   .header {
     max-width: 928px;
@@ -35,4 +33,4 @@
     max-width: 288px;
     height: 42px;
   }
-}
+} */
