--- a/src/blocks/main/main.css
+++ b/src/blocks/main/main.css
@@ -7,9 +7,8 @@
   display: flex;
   flex-direction: row;
   justify-content: space-between;
-  /* max-width: 984px; */
-  margin: auto;
-  margin-bottom: 5%;
+  margin-bottom: 9.5%;
+  margin-top: 7.2%;
 }
 
 /* @media screen and (max-width: 1024px) {
