Refactor: media screens were added for main page

--- a/src/blocks/content/content.css
+++ b/src/blocks/content/content.css
@@ -4,3 +4,9 @@
   margin: 0 auto;
   max-width: 1110px;
 }
+
+@media screen and (max-width: 1024px) {
+  .content {
+    padding-left: 43px;
+  }
+}
