--- a/src/blocks/events/__subtitle/events__subtitle.css
+++ b/src/blocks/events/__subtitle/events__subtitle.css
@@ -5,6 +5,6 @@
   /* color: #086788; */
   font-size: 21px;
   line-height: 25px;
-  font-family: Rubik;
+  /* font-family: Rubik; */
   font-weight: 300;
 }
