--- a/src/blocks/card/__poem/card__poem.css
+++ b/src/blocks/card/__poem/card__poem.css
@@ -3,6 +3,6 @@
   height: 324px;
   font-size: 24px;
   line-height: 36px;
-  font-family: Rubik;
+  /* font-family: Rubik; */
   font-weight: 300;
 }
