--- a/src/blocks/events/__image/events__image.css
+++ b/src/blocks/events/__image/events__image.css
@@ -5,3 +5,10 @@
   margin-top: 20px;
   margin-bottom: 31px;
 }
+
+@media screen and (max-width: 1024px) {
+  .events__image{
+    width: 223px;
+    height: 110px;
+  }
+}
