--- a/src/blocks/events/__title/events__title.css
+++ b/src/blocks/events/__title/events__title.css
@@ -1,5 +1,3 @@
-@import url(./_indent/events__title_indent.css);
-
 .events__title {
   max-width: 275px;
   /* color: #086788; */
@@ -7,7 +5,6 @@
   line-height: 28px;
   margin-bottom: 16px;
   margin-top: 0;
-  font-family: Rubik;
+  /* font-family: Rubik; */
   font-weight: 500;
-
 }
