--- a/src/blocks/main/__image/main__image.css
+++ b/src/blocks/main/__image/main__image.css
@@ -1,14 +1,14 @@
 .main__image {
-  max-width: 598px;
+  width: 598px;
   height: 399px;
 }
 
-/* @media screen and (max-width: 1030px) {
+ @media screen and (max-width: 1024px) {
   .main__image {
-    height: 580px;
+    width: 689px;
   }
 }
-
+/*
 @media screen and (max-width: 770px) {
   .main__image {
     width: 768px;
