--- a/src/blocks/main/__subtitle/main__subtitle.css
+++ b/src/blocks/main/__subtitle/main__subtitle.css
@@ -4,13 +4,12 @@
   line-height: 25px;
   text-align: left;
   font-weight: 300;
-  font-family: Rubik;
+  /* font-family: Rubik; */
 }
-/* 
-@media screen and (max-width: 330px) {
+
+/* @media screen and (max-width: 1024px) {
   .main__subtitle {
-    max-width: 288px;
-    font-size: 16px;
-    line-height: 20px;
+
+    
   }
-} */
+}  */
