--- a/src/blocks/main/__title/main__title.css
+++ b/src/blocks/main/__title/main__title.css
@@ -10,12 +10,12 @@
   font-family: Montserrat Alternates;
 }
 
-/* @media screen and (max-width: 768px) {
+@media screen and (max-width: 1024px) {
   .main__title {
-    font-size: calc(12vw);
+    margin: 0;
   }
 }
-
+/* 
 @media screen and (max-width: 350px) {
   .main__title {
     max-width: 288px;
