--- a/src/blocks/main/main.css
+++ b/src/blocks/main/main.css
@@ -11,16 +11,13 @@
   margin-top: 7.2%;
 }
 
-/* @media screen and (max-width: 1024px) {
+ @media screen and (max-width: 1024px) {
   .main {
-    width: 90%;
-    min-height: 962px;
-
-    margin-bottom: 0;
-    margin-bottom: 9%;
+    display: flex;
+    flex-direction: column-reverse;
   }
 }
-
+/*
 @media screen and (max-width: 770px) {
   .main {
     width: 100%;
