--- a/src/blocks/page-events/__column-links/page-events__column-links.css
+++ b/src/blocks/page-events/__column-links/page-events__column-links.css
@@ -6,7 +6,7 @@
   display: flex;
   flex-direction: row;
   list-style-type: none;
-  font-family: Rubik;
+  /* font-family: Rubik; */
   font-size: 18px;
   line-height: 21px;
 }
