--- a/src/blocks/footer/footer.css
+++ b/src/blocks/footer/footer.css
@@ -2,6 +2,7 @@
 @import url(./__links/footer__links.css);
 @import url(./__copyright/footer__copyright.css);
 @import url(./__container/footer__container.css);
+@import url(./__logo/footer__logo.css);
 
 .footer {
   /* footer */
