Refactor: margin for header part is addded

--- a/src/blocks/creation-event/__input/creation-event__input.css
+++ b/src/blocks/creation-event/__input/creation-event__input.css
@@ -1,6 +1,6 @@
 .creation-event__input {
   height: 60px;
-  margin-bottom: 52px;
+  /* margin-bottom: 52px; */
   width: 99%;
   border: 2px solid #d3e0f5;
   box-sizing: border-box;
