--- a/src/blocks/creation-event/__label/creation-event__label.css
+++ b/src/blocks/creation-event/__label/creation-event__label.css
@@ -2,9 +2,9 @@
   font-size: 24px;
   line-height: 28px;
   /* color: #086788; */
-  margin-top: 0;
   margin-bottom: 20px;
   width: 100%;
   font-family: Rubik;
   font-weight: 500;
+  margin-top: 52px;
 }
