--- a/src/blocks/popup/__title/popup__title.css
+++ b/src/blocks/popup/__title/popup__title.css
@@ -2,5 +2,8 @@
   font-style: normal;
   font-weight: bold;
   font-size: 36px;
-  line-height: 42px;
+  font-family: Montserrat Alternates;
+  line-height: 44px;
+  margin-top: 24px;
+  margin-bottom: 16px;
 }
