--- a/src/blocks/popup/__container/popup__container.css
+++ b/src/blocks/popup/__container/popup__container.css
@@ -1,5 +1,13 @@
 .popup__container {
+  width: 100%;
   display: flex;
   flex-direction: column;
   align-items: center;
+  max-width: 980px;
+  height: 581px;
+  background: #ffffff;
+  border-radius: 20px;
+  box-shadow: 0px 0px 25px rgba(0, 0, 0, 0.15);
+  position: relative;
+  box-sizing: border-box;
 }
