--- a/src/blocks/popup/popup.css
+++ b/src/blocks/popup/popup.css
@@ -1,17 +1,19 @@
 @import url("./__images/popup__images.css");
 @import url("./__container/popup__container.css");
-@import url('./__title/popup__title.css');
-@import url('./__subtitle/popup__subtitle.css');
+@import url("./__title/popup__title.css");
+@import url("./__subtitle/popup__subtitle.css");
 
 .popup {
-  width: 980px;
-  height: 581px;
   position: fixed;
-  left: 50%;
-  top: 50%;
-  transform: translateX(-50%) translateY(-50%);
+  top: 0px;
+  left: 0px;
+  background-color: rgba(0, 0, 0, 0.5);
+  width: 100%;
+  height: 100%;
+  display: none;
+  justify-content: center;
+  align-items: center;
+  transition: visibility 0s, opacity 0.5s linear;
   visibility: hidden;
   opacity: 0;
-  background: #ffffff;
-  border-radius: 20px;
 }
