--- a/src/index.css
+++ b/src/index.css
@@ -17,6 +17,7 @@
 @import url(./blocks/lead/lead.css);
 @import url(./blocks/submit/_type/submit_type_wide.css);
 @import url(./blocks/submit/_type/submit_type_red_color.css);
+@import url(./blocks/submit/_type/submit_type_margin.css);
 
 @import url('https://fonts.googleapis.com/css2?family=Rubik:wght@300;500&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Montserrat+Alternates:wght@500;700&display=swap');
