Refactoring: Naming is changed at dobtotvorenie

--- a/src/blocks/elements/elements.css
+++ b/src/blocks/elements/elements.css
@@ -8,6 +8,6 @@
     /* margin: 0 auto; */
     padding:0;
     justify-content: center;/*отцентровка элементов по центру*/
-    border: 1px solid slategrey;
+    /* border: 1px solid slategrey; */
     margin-bottom: 9.1%;
 }
