--- a/src/blocks/card/__lyrics/card__lyrics.css
+++ b/src/blocks/card/__lyrics/card__lyrics.css
@@ -5,7 +5,11 @@
   font-size: 24px;
   line-height: 28px;
   width: 350px;
+  height: 140px;
   font-family: Rubik;
   color: #086788;
   text-align: center;
+  text-overflow: ellipsis;
+  white-space: normal;
+  overflow: hidden;
 }
