BugFix: height is removed from description_event

--- a/src/blocks/description_event/description_event.css
+++ b/src/blocks/description_event/description_event.css
@@ -2,6 +2,6 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    height: 900px;
+    /* height: 900px; */
     margin-bottom: 132px;
 }
