--- a/src/blocks/card/__poem/card__poem.css
+++ b/src/blocks/card/__poem/card__poem.css
@@ -1,6 +1,6 @@
 .card__poem {
   width: 633px;
-  height: 324px;
+  /* height: 324px; */
   font-size: 24px;
   line-height: 36px;
   /* font-family: Rubik; */
