BugFix: height is removed from card__lyrics and card__author

--- a/src/blocks/card/__author/card__author.css
+++ b/src/blocks/card/__author/card__author.css
@@ -1,6 +1,6 @@
 .card__author {
   width: 438px;
-  height: 56px;
+  /* height: 56px;  */
   font-weight: 500;
   font-size: 48px;
   font-family: Montserrat Alternates;
