--- a/src/blocks/card/__lyrics/card__lyrics.css
+++ b/src/blocks/card/__lyrics/card__lyrics.css
@@ -1,5 +1,5 @@
 .card__lyrics {
-  margin-top: 0;
+  margin-top: 44px;
   margin-bottom: 0;
   font-weight: 500;
   font-size: 24px;
@@ -13,4 +13,5 @@
   white-space: normal;
   overflow: hidden;
   margin-bottom: 60px;
+  text-decoration: none;
 }
