--- a/src/blocks/card/__poem/card__poem.css
+++ b/src/blocks/card/__poem/card__poem.css
@@ -1,8 +1,23 @@
 .card__poem {
   width: 633px;
-  /* height: 324px; */
   font-size: 24px;
   line-height: 36px;
-  /* font-family: Rubik; */
   font-weight: 300;
+  white-space: pre-wrap;
+}
+
+.card__poem_char-color1 {
+ color: #F96900;
+}
+
+.card__poem_char-color2 {
+  color: #F9005A;
+}
+
+.card__poem_char-color3 {
+  color: #0075FF;
+}
+
+.card__poem_char-color4 {
+  color: #870AEB;
 }
