--- a/src/blocks/header/header.css
+++ b/src/blocks/header/header.css
@@ -1,36 +1,26 @@
 @import url('./__logo/header__logo.css');
 @import url('./__link/header_link.css');
-@import url('./__links/header__links.css');
 
 .header {
-  /* width: 94%; */
-  max-width: 1110px;
-  height: 96px;
-  margin-bottom: 100px;
+  display: grid;
+  grid-template-columns: 1fr 24px 140px minmax(1px, 1140px) 24px 1fr;
+  grid-template-rows: 24px 80px 24px;
   margin-top: 0;
-  display: flex;
   flex-direction: column;
   justify-content: center;
-  box-sizing: border-box;
-  margin-left: auto;
-  margin-right: auto;
 }
 
 @media screen and (max-width: 1024px) {
   .header {
-   padding-left: 41px;
-  }
-}
-/* 
-@media screen and (max-width: 810px) {
-  .header {
-    max-width: 720px;
+    grid-template-columns: 1fr 36px 140px minmax(1px, 1140px) 36px 1fr;
+    grid-template-rows: 24px 80px 24px;
+
   }
 }
 
-@media screen and (max-width: 410px) {
+@media screen and (max-width: 720px) {
   .header {
-    max-width: 288px;
-    height: 42px;
+    grid-template-columns: 1fr 48px 140px minmax(1px, 1140px) 48px 1fr;
+    grid-template-rows: 12px 80px 12px;
   }
-} */
+}
