--- a/src/index.css
+++ b/src/index.css
@@ -1,26 +1,28 @@
-@import url(./vendor/normalize.css);
-@import url(./blocks/page/page.css);
+@import url('./blocks/page/page.css');
+@import url('./blocks/main/main.css');
+@import url('./blocks/content/content.css');
+@import url('./blocks/footer/footer.css');
+@import url('./blocks/hero/hero.css');
+@import url('./blocks/header/header.css');
+@import url('./blocks/choices/choices.css');
+@import url('./blocks/creation-event/creation-event.css');
+@import url('./blocks/popup/popup.css');
+@import url('./blocks/popup/_opened/popup_opened.css');
+@import url('./blocks/card/card.css');
+@import url('./blocks/page-events/page-events.css');
+@import url('./blocks/events/events.css');
+@import url('./blocks/event/event.css');
+@import url('./blocks/description_event/description_event.css');
+@import url('./blocks/submit/submit.css');
+@import url('./blocks/choice/choice.css');
+@import url('./blocks/choice/__image/_withGuy/choice__image_withGuy.css');
+@import url('./blocks/choice/__image/_withGirls/choice__image_withGirls.css');
+@import url('./blocks/submit/_type/submit_type_wide.css');
+@import url('./blocks/submit/_type/submit_type_red_color.css');
+@import url('./blocks/submit/_type/submit_type_margin.css');
+@import url('./blocks/submit/submit__link.css');
+@import url('./blocks/submit/__link/submit__link.css');
+@import url('./vendor/normalize.css');
 @import url('https://fonts.googleapis.com/css2?family=Rubik:wght@300;500&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Montserrat+Alternates:wght@500;700&display=swap');
-@import url(./blocks/content/content.css);
-@import url(./blocks/footer/footer.css);
-@import url(./blocks/main/main.css);
-@import url(./blocks/header/header.css);
-@import url(./blocks/events/events.css);
-@import url(./blocks/creation-event/creation-event.css);
-@import url(./blocks/popup/popup.css);
-@import url(./blocks/popup/_opened/popup_opened.css);
-@import url(./blocks/card/card.css);
-@import url(./blocks/page-events/page-events.css);
-@import url(./blocks/elements/elements.css);
-@import url(./blocks/intro/intro.css);
-@import url(./blocks/description_event/description_event.css);
-@import url(./blocks/submit/submit.css);
-@import url(./blocks/lead/lead.css);
-@import url(./blocks/submit/_type/submit_type_wide.css);
-@import url(./blocks/submit/_type/submit_type_red_color.css);
-@import url(./blocks/submit/_type/submit_type_margin.css);
-@import url(./blocks/submit/submit__link.css);
-
-@import url(./blocks/submit/__link/submit__link.css);
 
