--- a/src/blocks/card/__address/card__address.css
+++ b/src/blocks/card/__address/card__address.css
@@ -1,10 +1,14 @@
 .card__address {
-  margin-top: 12px;
-  margin-bottom: 8px;
-  width: 350px;
+  grid-area: 5 / 3 / 6 / 4;
   font-size: 18px;
+  margin: 0 -7px 0 0;
   line-height: 21px;
   color: #295463;
-  font-family: Rubik;
+
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  overflow: hidden;
+  font-family: Rubik, sans-serif;
   font-weight: 300;
+  text-align: right;
 }
