--- a/src/blocks/card/__date/card__date.css
+++ b/src/blocks/card/__date/card__date.css
@@ -1,10 +1,9 @@
 .card__date {
-  margin-top: 0;
-  width: 350px;
-  font-size: 18px;
+  grid-area: 5 / 1 / 6 / 2;
+  margin: 0;
+  font-size: 16px;
   line-height: 21px;
   /* color: #086788; */
-  font-family: Rubik;
+  font-family: Rubik, sans-serif;
   font-weight: 300;
-  text-align: center;
 }
