--- a/src/blocks/events/__title/events__title.css
+++ b/src/blocks/events/__title/events__title.css
@@ -1,10 +1,10 @@
 .events__title {
-  max-width: 289px;
-  /* color: #086788; */
-  font-size: 24px;
-  line-height: 28px;
-  margin-bottom: 16px;
-  margin-top: 0;
-  /* font-family: Rubik; */
-  font-weight: 500;
+  grid-area: 2 / 2 / 3 / 3;
+  font-weight: bold;
+  font-size: 36px;
+  font-family: Montserrat Alternates, sans-serif;
+  line-height: 44px;
+  margin: 0;
+  text-align: center;
+  justify-self: center;
 }
