--- a/src/blocks/events/events.css
+++ b/src/blocks/events/events.css
@@ -1,10 +1,16 @@
-@import url("./__title/events__title.css");
-@import url("./__subtitle/events__subtitle.css");
-@import url("./__container/events__container.css");
-@import url('./__image/events__image.css');
+@import url('./__title/events__title.css');
+@import url('./__cards/events__cards.css');
 
 .events {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
+  grid-area: 1 / 3 / 2 / 4;
+  grid-auto-flow: row;
+  display: grid;
+  grid-template-rows: 40px min-content 80px max-content 80px;
+  grid-template-columns: 39px minmax(1px, 1202px) 39px;
+}
+
+@media screen and (max-width: 480px) {
+  .events {
+    grid-template-columns: 0 minmax(1px, 1202px) 0;
+  }
 }
