--- a/src/blocks/footer/__copyright/footer__copyright.css
+++ b/src/blocks/footer/__copyright/footer__copyright.css
@@ -1,18 +1,19 @@
 .footer__copyright {
+  grid-area: 2 / 3 / 3 / 4;
   max-width: 200px;
   text-align: right;
   color: #086788;
   margin-top: 0;
-  font-family: Rubik;
+  font-family: Rubik, sans-serif;
   font-weight: 300;
   font-size: 18px;
   line-height: 21px;
   margin-bottom: 0;
 }
 
-/* @media screen and (max-width: 768px) {
+@media screen and (max-width: 480px) {
   .footer__copyright {
-    line-height: 14px;
-    text-align: left;
+    grid-area: 4 / 3 / 5 / 6;
+    justify-self: center;
   }
-} */
+}
