--- a/src/blocks/header/__logo/header__logo.css
+++ b/src/blocks/header/__logo/header__logo.css
@@ -1,11 +1,17 @@
 .header__logo {
-  width: 109px;
-  height: 64px;
+  opacity: 1;
+  transition: opacity 0.3s ease-in-out;
+  width: 100%;
+  justify-self: start;
 }
 
-/* @media screen and (max-width: 410px) {
+@media screen and (max-width: 480px) {
   .header__logo {
-    max-width: 142px;
-    height: 42px;
+    margin-left: -30px;
+    width: 80%;
   }
-} */
+}
+
+.header__link :hover {
+  opacity: 0.7;
+}
