--- a/src/blocks/main/main.css
+++ b/src/blocks/main/main.css
@@ -1,35 +1,3 @@
-@import url(./__image/main__image.css);
-@import url(./__subtitle/main__subtitle.css);
-@import url(./__title/main__title.css);
-@import url(./__container/main__container.css);
-
 .main {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-  margin-bottom: 9.5%;
+  grid-area: 1 / 3 / 2 / 4;
 }
-
- @media screen and (max-width: 1024px) {
-  .main {
-    display: flex;
-    flex-direction: column-reverse;
-  }
-}
-/*
-@media screen and (max-width: 770px) {
-  .main {
-    width: 100%;
-    min-height: 862px;
-    margin-bottom: 12%;
-
-  }
-}
-
-@media screen and (max-width: 330px) {
-  .main {
-    max-width: 320px;
-    min-height: 406px;
-    margin-bottom: 21%;
-  }
-} */
