--- a/src/blocks/page-events/__title/page-events__title.css
+++ b/src/blocks/page-events/__title/page-events__title.css
@@ -2,8 +2,7 @@
   max-width: 587px;
   font-weight: bold;
   font-size: 36px;
-  font-family: Montserrat Alternates;
+  font-family: Montserrat Alternates, sans-serif;
   line-height: 44px;
-  margin-top: 0;
-  margin-bottom: 1.8%;
+  margin: 0;
 }
