--- a/src/blocks/submit/submit.css
+++ b/src/blocks/submit/submit.css
@@ -6,24 +6,16 @@
   background: #f96900;
   border-radius: 10px;
   color: #ffffff;
-  width: 318px;
   height: 56px;
   border: 0;
   text-decoration: none;
-  font-family: Rubik;
+  font-family: Rubik, sans-serif;
   font-weight: 500;
   font-size: 21px;
   line-height: 25px;
-  margin-top: 16px;
 }
 
 .submit:hover {
   opacity: 0.8;
 }
 
-
-@media screen and (max-width: 1024px) {
-  .submit {
-    width: 326px;
-    }
-}
